--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minecraft-protocol-chat-parser",
   "version": "1.0.0",
-  "description": "",
+  "description": "A small library to transform a string formatted by Minecraft into a JavaScript object ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
